--- a/EternityWebServiceApp/Views/GameScore/Delete.cshtml
+++ b/EternityWebServiceApp/Views/GameScore/Delete.cshtml
@@ -13,8 +13,8 @@
     </tr>
     <tr>
         <td>@Model.GameScoreId</td>
-        <td>@ViewData["User"]</td>
-        <td>@ViewData["Game"]</td>
+        <td>@Model.User.UserName</td>
+        <td>@Model.Game.Name</td>
         <td>@Model.Score</td>
     </tr>
 </table>
