--- a/EternityWebServiceApp/Views/GameScore/Index.cshtml
+++ b/EternityWebServiceApp/Views/GameScore/Index.cshtml
@@ -10,30 +10,19 @@
         <th>Пользователь</th>
         <th>Игра</th>
         <th>Счет</th>
+        <th></th>
     </tr>
 
     @foreach (var item in Model)
     {
-        @foreach (var user in ViewBag.User)
-        {
-            @if (item.UserId == user.UserId)
-            {
-                @foreach (var game in ViewBag.Game)
-                {
-                    @if (item.GameId == game.GameId)
-                    {
-                        <tr>
-                            <td>@item.GameScoreId</td>
-                            <td>@user.UserName</td>
-                            <td>@game.Name</td>
-                            <td>@item.Score</td>
-                            <td>
-                                <a asp-controller="GameScore" asp-action="Delete" asp-route-id="@item.GameScoreId">Удалить</a>
-                            </td>
-                        </tr>
-                    }
-                }
-            }
-        }
+        <tr>
+            <td>@item.GameScoreId</td>
+            <td>@item.User.UserName</td>
+            <td>@item.Game.Name</td>
+            <td>@item.Score</td>
+            <td>
+                <a asp-controller="GameScore" asp-action="Delete" asp-route-id="@item.GameScoreId">Удалить</a>
+            </td>
+        </tr>
     }
 </table>
