--- a/EternityWebServiceApp/Views/Game/Create.cshtml
+++ b/EternityWebServiceApp/Views/Game/Create.cshtml
@@ -1,15 +1,15 @@
-﻿@model             Service
+﻿@model EternityWebServiceApp.Models.Game
  
 @{
-    ViewData["Title"] = "Новый сервис";
+    ViewData["Title"] = "Новая игра";
 }
 <h2>@ViewData["Title"]</h2>
  
-<form asp-action="Create" asp-controller="Service" method="post" enctype="multipart/form-data">
+<form asp-action="Create" asp-controller="Game" method="post" enctype="multipart/form-data">
     <div class="validation" asp-validation-summary="ModelOnly"></div>
     <div>
         <div class="form-group">
-            <label asp-for="Name">Сервис</label>
+            <label asp-for="Name">Игра</label>
             <input type="text" asp-for="Name" class="form-control form-control-sm" />
             <span asp-validation-for="Name"></span>
         </div>
@@ -20,5 +20,5 @@
 </form>
  
 <div>
-    <a asp-controller="Service" asp-action="Index">Вернуться к списку</a>
+    <a asp-controller="Game" asp-action="Index">Вернуться к списку</a>
 </div>
