--- a/EternityWebServiceApp/Views/Game/Edit.cshtml
+++ b/EternityWebServiceApp/Views/Game/Edit.cshtml
@@ -1,15 +1,15 @@
-﻿@model             Service
+﻿@model EternityWebServiceApp.Models.Game
 @{
-    ViewData["Title"] = "Редактировать сервис";
+    ViewData["Title"] = "Редактировать игру";
 }
 <h2>@ViewData["Title"].</h2>
  
-<form asp-action="Edit" asp-controller="Service" method="post" enctype="multipart/form-data">
+<form asp-action="Edit" asp-controller="Game" method="post" enctype="multipart/form-data">
     <div class="validation" asp-validation-summary="ModelOnly"></div>
     <div>
-        <input type="hidden" asp-for="ServiceId" />
+        <input type="hidden" asp-for="GameId" />
         <div class="form-group">
-            <label asp-for="Name">Сервис</label>
+            <label asp-for="Name">Игра</label>
             <input type="text" asp-for="Name" class="form-control" />
             <span asp-validation-for="Name"></span>
         </div>
@@ -20,5 +20,5 @@
 </form>
  
 <div>
-    <a asp-controller="Service" asp-action="Index">Вернуться к списку</a>
+    <a asp-controller="Game" asp-action="Index">Вернуться к списку</a>
 </div>
