--- a/EternityWebServiceApp/Views/User/Create.cshtml
+++ b/EternityWebServiceApp/Views/User/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model             User
+﻿@model EternityWebServiceApp.Models.User
 @{
     ViewData["Title"] = "Новый пользователь";
 }
@@ -8,9 +8,14 @@
     <div class="validation" asp-validation-summary="ModelOnly"></div>
     <div>
         <div class="form-group">
-            <label asp-for="Email"></label>
+            <label asp-for="Email">Email</label>
             <input type="text" asp-for="Email" class="form-control form-control-sm" />
             <span asp-validation-for="Email"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="UserName">Никнейм</label>
+            <input type="text" asp-for="UserName" class="form-control form-control-sm" />
+            <span asp-validation-for="UserName"></span>
         </div>
         <div class="form-group">
             <label asp-for="Password">Пароль</label>
@@ -29,29 +34,6 @@
             <span asp-validation-for="RoleId"></span>
         </div>
         <div class="form-group">
-            <label asp-for="UserDatum.FirstName">Имя</label>
-            <input type="text" asp-for="UserDatum.FirstName" class="form-control  form-control-sm" />
-            <span asp-validation-for="UserDatum.FirstName"></span>
-
-        </div>
-        <div class="form-group">
-            <label asp-for="UserDatum.SecondName">Отчество</label>
-            <input type="text" asp-for="UserDatum.SecondName" class="form-control  form-control-sm" />
-            <span asp-validation-for="UserDatum.SecondName"></span>
-
-        </div>
-        <div class="form-group">
-            <label asp-for="UserDatum.LastName">Фамилия</label>
-            <input type="text" asp-for="UserDatum.LastName" class="form-control  form-control-sm" />
-            <span asp-validation-for="UserDatum.LastName"></span>
-
-        </div>
-        <div class="form-group">
-            <label asp-for="UserDatum.PhoneNumber">Телефон</label>
-            <input type="text" asp-for="UserDatum.PhoneNumber" class="form-control  form-control-sm" id="Phone"/>
-            <span asp-validation-for="UserDatum.PhoneNumber"></span>
-        </div>
-        <div class="form-group">
             <input type="submit" value="Сохранить" class="btn btn-outline-secondary" />
         </div>
     </div>
@@ -60,9 +42,3 @@
 <div>
     <a asp-controller="User" asp-action="Index">Вернуться к списку</a>
 </div>
-
-<script src="~/lib/jquery/dist/jquery.min.js"></script>
-<script src="~/lib/plugins/jquery.maskedinput.js"></script>
-<script type="text/javascript">
-    $("#Phone").mask("+375(99)999-99-99");
-</script>
