Added responsibility to add images

--- a/EternityWebServiceApp/Views/City/Delete.cshtml
+++ b/EternityWebServiceApp/Views/City/Delete.cshtml
@@ -13,7 +13,7 @@
     <tr>
         <td>@Model.CityId</td>
         <td>@Model.Title</td>
-        <td>@Model.Description</td>
+        <td style="white-space:pre">@Model.Description</td>
     </tr>
 </table>
  
