--- a/EternityWebServiceApp/Views/Attraction/Index.cshtml
+++ b/EternityWebServiceApp/Views/Attraction/Index.cshtml
@@ -17,7 +17,7 @@
         <tr>
             <td>@item.AttractionId</td>
             <td>@item.Title</td>
-            <td>@item.Description</td>
+            <td style="white-space:pre">@item.Description</td>
 
             <td>
                 <a asp-controller="Attraction" asp-action="Edit" asp-route-id="@item.AttractionId">Изменить</a> |
