--- a/EternityWebServiceApp/Views/City/Edit.cshtml
+++ b/EternityWebServiceApp/Views/City/Edit.cshtml
@@ -15,8 +15,12 @@
         </div>
         <div class="form-group">
             <label asp-for="Description">Описание</label>
-            <input type="text" asp-for="Description" class="form-control" />
+            <textarea asp-for="Description" class="form-control" ></textarea>
             <span asp-validation-for="Description"></span>
+        </div>
+        <div class="form-group">
+            <label>Изображения</label>
+            <input type="file" name="uploadedFiles" multiple="multiple" class="form-control form-control-sm" />
         </div>
         <div class="form-group">
             <input type="submit" value="Сохранить" class="btn btn-outline-secondary" />
