--- a/EternityWebServiceApp/Views/City/Create.cshtml
+++ b/EternityWebServiceApp/Views/City/Create.cshtml
@@ -20,7 +20,7 @@
         </div>
         <div class="form-group">
             <label>Изображения</label>
-            <input type="file" name="uploadedFiles" multiple="multiple" class="form-control form-control-sm" />
+            <input required type="file" name="uploadedFiles" accept=".png,.jpg,.jpeg" multiple="multiple" class="form-control form-control-sm" />
         </div>
         <div class="form-group">
             <input type="submit" value="Сохранить" class="btn btn-outline-secondary" />
