--- a/EternityWebServiceApp/Views/City/Edit.cshtml
+++ b/EternityWebServiceApp/Views/City/Edit.cshtml
@@ -4,7 +4,7 @@
 }
 <h2>@ViewData["Title"].</h2>
  
-<form asp-action="Edit" asp-controller="CIty" method="post" enctype="multipart/form-data">
+<form asp-action="Edit" asp-controller="City" method="post" enctype="multipart/form-data">
     <div class="validation" asp-validation-summary="ModelOnly"></div>
     <div>
         <input type="hidden" asp-for="CityId" />
@@ -20,7 +20,7 @@
         </div>
         <div class="form-group">
             <label>Изображения</label>
-            <input type="file" name="uploadedFiles" multiple="multiple" class="form-control form-control-sm" />
+            <input type="file" name="uploadedFiles" accept=".png,.jpg,.jpeg" multiple="multiple" class="form-control form-control-sm" />
         </div>
         <div class="form-group">
             <input type="submit" value="Сохранить" class="btn btn-outline-secondary" />
