--- a/EternityWebServiceApp/Views/User/Edit.cshtml
+++ b/EternityWebServiceApp/Views/User/Edit.cshtml
@@ -42,6 +42,10 @@
             <span asp-validation-for="RoleId"></span>
         </div>
         <div class="form-group">
+            <label>Аватар</label>
+            <input type="file" name="uploadedFile" accept=".png,.jpg,.jpeg" class="form-control form-control-sm" />
+        </div>
+        <div class="form-group">
             <input type="submit" value="Сохранить" class="btn btn-outline-secondary" />
         </div>
     </div>
