--- a/EternityWebServiceApp/Views/City/Delete.cshtml
+++ b/EternityWebServiceApp/Views/City/Delete.cshtml
@@ -4,18 +4,22 @@
 }
 <h2>@ViewData["Title"]</h2>
 
-<table class="table">
-    <tr>
-        <th>ID</th>
-        <th>Город</th>
-        <th>Описание</th>
-    </tr>
-    <tr>
-        <td>@Model.CityId</td>
-        <td>@Model.Title</td>
-        <td style="white-space:pre">@Model.Description</td>
-    </tr>
-</table>
+<div class="table-responsive">
+    <table class="table">
+        <tr>
+            <th>ID</th>
+            <th>Город</th>
+            <th>Описание</th>
+        </tr>
+        <tr>
+            <td>@Model.CityId</td>
+            <td>@Model.Title</td>
+            <td>
+                <span class="d-inline-block text-truncate" style="max-width: 300px;">@Model.Description</span>
+            </td>
+        </tr>
+    </table>
+</div>
  
 <form asp-action="Delete" asp-controller="City" method="post">
     <div class="form-group">
