--- a/EternityWebServiceApp/Views/GameScore/Index.cshtml
+++ b/EternityWebServiceApp/Views/GameScore/Index.cshtml
@@ -4,25 +4,27 @@
 }
 <h2>@ViewData["Title"]</h2>
 
-<table class="table">
-    <tr>
-        <th>ID</th>
-        <th>Пользователь</th>
-        <th>Игра</th>
-        <th>Счет</th>
-        <th></th>
-    </tr>
-
-    @foreach (var item in Model)
-    {
+<div class="table-responsive">
+    <table class="table">
         <tr>
-            <td>@item.GameScoreId</td>
-            <td>@item.User.UserName</td>
-            <td>@item.Game.Name</td>
-            <td>@item.Score</td>
-            <td>
-                <a asp-controller="GameScore" asp-action="Delete" asp-route-id="@item.GameScoreId">Удалить</a>
-            </td>
+            <th>ID</th>
+            <th>Пользователь</th>
+            <th>Игра</th>
+            <th>Счет</th>
+            <th></th>
         </tr>
-    }
-</table>
+
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>@item.GameScoreId</td>
+                <td>@item.User.UserName</td>
+                <td>@item.Game.Name</td>
+                <td>@item.Score</td>
+                <td>
+                    <a asp-controller="GameScore" asp-action="Delete" asp-route-id="@item.GameScoreId">Удалить</a>
+                </td>
+            </tr>
+        }
+    </table>
+</div>
