--- a/EternityWebServiceApp/Views/Shared/_Layout.cshtml
+++ b/EternityWebServiceApp/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
+                <img src="~/logo.svg" width="60" height="60" class="d-inline-block align-top">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Главная</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
