--- a/EternityWebServiceApp/Views/User/Delete.cshtml
+++ b/EternityWebServiceApp/Views/User/Delete.cshtml
@@ -4,20 +4,22 @@
 }
 <h2>ViewData["Title"]</h2>
 
-<table class="table">
-    <tr>
-        <th>ID</th>
-        <th>Email</th>
-        <th>Никнейм</th>
-        <th>Роль</th>
-    </tr>
-    <tr>
-        <td>@Model.UserId</td>
-        <td>@Model.Email</td>
-        <td>@Model.UserName</td>
-        <td>@ViewData["RoleName"]</td>
-    </tr>
-</table>
+<div class="table-responsive">
+    <table class="table">
+        <tr>
+            <th>ID</th>
+            <th>Email</th>
+            <th>Никнейм</th>
+            <th>Роль</th>
+        </tr>
+        <tr>
+            <td>@Model.UserId</td>
+            <td>@Model.Email</td>
+            <td>@Model.UserName</td>
+            <td>@ViewData["RoleName"]</td>
+        </tr>
+    </table>
+</div>
  
 <form asp-action="Delete" asp-controller="User" method="post">
     <div class="form-group">
