--- a/EternityWebServiceApp/Views/Shared/_Layout.cshtml
+++ b/EternityWebServiceApp/Views/Shared/_Layout.cshtml
@@ -32,10 +32,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Attraction" asp-action="Index">Достопримечательности</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Game" asp-action="Index">Игры</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="DataReference" asp-action="Index">Связи</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="GameScore" asp-action="Index">Лучшие результаты</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="GameScore" asp-action="Index">Игры</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Logout">Выход</a>
