--- a/EternityWebServiceApp/Views/City/Edit.cshtml
+++ b/EternityWebServiceApp/Views/City/Edit.cshtml
@@ -9,13 +9,13 @@
     <div>
         <input type="hidden" asp-for="CityId" />
         <div class="form-group">
-            <label asp-for="Title">Город</label>
-            <input type="text" asp-for="Title" class="form-control" />
+            <label asp-for="Title">Город*</label>
+            <input type="text" asp-for="Title" class="form-control" required />
             <span asp-validation-for="Title"></span>
         </div>
         <div class="form-group">
-            <label asp-for="Description">Описание</label>
-            <textarea asp-for="Description" class="form-control" ></textarea>
+            <label asp-for="Description">Описание*</label>
+            <textarea asp-for="Description" class="form-control" required ></textarea>
             <span asp-validation-for="Description"></span>
         </div>
         <div class="form-group">
