--- a/EternityWebServiceApp/Views/Role/Create.cshtml
+++ b/EternityWebServiceApp/Views/Role/Create.cshtml
@@ -9,8 +9,8 @@
     <div class="validation" asp-validation-summary="ModelOnly"></div>
     <div>
         <div class="form-group">
-            <label asp-for="Name">Роль</label>
-            <input type="text" asp-for="Name" class="form-control form-control-sm" />
+            <label asp-for="Name">Роль*</label>
+            <input type="text" asp-for="Name" class="form-control form-control-sm" required />
             <span asp-validation-for="Name"></span>
         </div>
         <div class="form-group">
