--- a/EternityWebServiceApp/Views/Role/Edit.cshtml
+++ b/EternityWebServiceApp/Views/Role/Edit.cshtml
@@ -9,8 +9,8 @@
     <div>
         <input type="hidden" asp-for="RoleId" />
         <div class="form-group">
-            <label asp-for="Name">Роль</label>
-            <input type="text" asp-for="Name" class="form-control" />
+            <label asp-for="Name">Роль*</label>
+            <input type="text" asp-for="Name" class="form-control" required />
             <span asp-validation-for="Name"></span>
         </div>
         <div class="form-group">
