--- a/EternityWebServiceApp/Views/User/Create.cshtml
+++ b/EternityWebServiceApp/Views/User/Create.cshtml
@@ -8,24 +8,24 @@
     <div class="validation" asp-validation-summary="ModelOnly"></div>
     <div>
         <div class="form-group">
-            <label asp-for="Email">Email</label>
-            <input type="text" asp-for="Email" class="form-control form-control-sm" />
+            <label asp-for="Email">Email*</label>
+            <input type="text" asp-for="Email" class="form-control form-control-sm" required />
             <span asp-validation-for="Email"></span>
         </div>
         <div class="form-group">
-            <label asp-for="UserName">Никнейм</label>
-            <input type="text" asp-for="UserName" class="form-control form-control-sm" />
+            <label asp-for="UserName">Никнейм*</label>
+            <input type="text" asp-for="UserName" class="form-control form-control-sm" required />
             <span asp-validation-for="UserName"></span>
         </div>
         <div class="form-group">
-            <label asp-for="Password">Пароль</label>
-            <input type="text" asp-for="Password" class="form-control form-control-sm" />
+            <label asp-for="Password">Пароль*</label>
+            <input type="text" asp-for="Password" class="form-control form-control-sm" required />
             <span asp-validation-for="Password"></span>
         </div>
         <div class="form-group">
-            <label asp-for="RoleId">Роль</label>
-            <select asp-for="RoleId" class="form-control form-control-sm" >
-                <option value="0">Выберите роль</option>
+            <label asp-for="RoleId">Роль*</label>
+            <select asp-for="RoleId" class="form-control form-control-sm" required >
+                <option value="">Выберите роль</option>
                 @foreach (Role role in ViewBag.Roles)
                 {
                     <option value="@role.RoleId">@role.Name</option>
@@ -34,7 +34,7 @@
             <span asp-validation-for="RoleId"></span>
         </div>
         <div class="form-group">
-            <label>Аватар</label>
+            <label>Аватар*</label>
             <input required type="file" accept=".png,.jpg,.jpeg" name="uploadedFile" class="form-control form-control-sm" />
         </div>
         <div class="form-group">
