--- a/EternityWebServiceApp/Views/Shared/_Layout.cshtml
+++ b/EternityWebServiceApp/Views/Shared/_Layout.cshtml
@@ -38,6 +38,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="GameScore" asp-action="Index">Игры</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="TestQuestion" asp-action="Index">Вопросы</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Logout">Выход</a>
                         </li>
                     </ul>
