added test project? bug fix

--- a/EternityWebServiceApp/Views/Home/Index.cshtml
+++ b/EternityWebServiceApp/Views/Home/Index.cshtml
@@ -1,6 +1,8 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
-<h2>Главная страница</h2>
+﻿<div>
+    <img src="~/admin1.png" class="img-fluid" />
+    <img src="~/admin2.png" class="img-fluid" />
+    <img src="~/admin3.png" class="img-fluid" />
+    <img src="~/admin4.png" class="img-fluid" />
+    <img src="~/admin5.png" class="img-fluid" />
+    <img src="~/admin6.png" class="img-fluid" />
+</div>
