--- a/EternityWebServiceApp/Views/TestQuestion/Edit.cshtml
+++ b/EternityWebServiceApp/Views/TestQuestion/Edit.cshtml
@@ -1,6 +1,6 @@
 ﻿@model EternityWebServiceApp.Models.TestQuestion
 @{
-    ViewData["Title"] = "Редактировать город";
+    ViewData["Title"] = "Редактировать вопрос";
 }
 <h2>@ViewData["Title"].</h2>
  
