--- a/EternityWebServiceApp/Views/TestQuestion/Index.cshtml
+++ b/EternityWebServiceApp/Views/TestQuestion/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<TestQuestion>
 @{
-    ViewData["Title"] = "Города";
+    ViewData["Title"] = "Вопросы";
 }
 <h2>@ViewData["Title"]</h2>
 
