--- a/EternityWebServiceApp/Views/User/Create.cshtml
+++ b/EternityWebServiceApp/Views/User/Create.cshtml
@@ -34,8 +34,8 @@
             <span asp-validation-for="RoleId"></span>
         </div>
         <div class="form-group">
-            <label>Аватар*</label>
-            <input required type="file" accept=".png,.jpg,.jpeg" name="uploadedFile" class="form-control form-control-sm" />
+            <label>Аватар</label>
+            <input type="file" accept=".png,.jpg,.jpeg" name="uploadedFile" class="form-control form-control-sm" />
         </div>
         <div class="form-group">
             <input type="submit" value="Сохранить" class="btn btn-outline-secondary" />
