--- a/EternityWebServiceApp/Views/User/Delete.cshtml
+++ b/EternityWebServiceApp/Views/User/Delete.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewData["Title"] = "Удаление пользователя";
 }
-<h2>ViewData["Title"]</h2>
+<h2>@ViewData["Title"]</h2>
 
 <div class="table-responsive">
     <table class="table">
